--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,11 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/common": "^11.0.9",
+    "@nestjs/core": "^11.0.9",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.3.1",
+    "puppeteer": "^24.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
