--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.9",
     "@nestjs/core": "^11.0.9",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.6.0",
+    "apollo-server-express": "^3.13.0",
+    "graphql": "^16.10.0",
+    "graphql-type-json": "^0.3.2",
+    "prisma-nestjs-graphql": "^21.1.1",
     "puppeteer": "^24.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
