--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^11.0.9",
     "@nestjs/core": "^11.0.9",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.6.0",
     "apollo-server-express": "^3.13.0",
+    "bcrypt-ts": "^6.0.0",
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
     "prisma-nestjs-graphql": "^21.1.1",
