--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.4",
     "@apollo/client": "^3.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "apollo-angular": "^10.0.3",
     "express": "^4.18.2",
     "graphql": "^16",
