--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.6.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt-ts": "^6.0.0",
@@ -35,7 +36,8 @@
     "prisma-nestjs-graphql": "^21.1.1",
     "puppeteer": "^24.2.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
