--- a/.github/workflows/trello-sync.yml
+++ b/.github/workflows/trello-sync.yml
@@ -1,6 +1,8 @@
 name: GitHub Commit To Trello Card
 
-on: [push, pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, closed]
 
 jobs:
   trello:
@@ -18,7 +20,3 @@ jobs:
           trello-list-name-commit: "Doing"
           trello-list-name-pr-open: "Reviewing"
           trello-list-name-pr-closed: "Done"
-
-  
-
-  
